# project

./: .gitignore  Makefile  README.md  pyproject.toml
project/: __main__.py  app.py  config.py  utils.py
